yamle/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 043309366164.dkr.ecr.eu-north-1.amazonaws.com/cluster-project-repository:api
        ports:
        - containerPort: 8080
