yamle/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 043309366164.dkr.ecr.eu-north-1.amazonaws.com/cluster-project-repository:front
        ports:
        - containerPort: 80
